Switch to golang compilation in docker build phase, polish local development guides

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,17 @@
-apihub-service/.idea
-apihub-service/go.sum
+qubership-apihub-service/.idea
+qubership-apihub-service/go.sum
 .idea
 .vscode
 .history
-apihub-service/data/**
-apihub-service/static/**
-apihub-service/logs/**
-apihub-service/apihub-service.exe
-apihub-service/__debug_bin.exe
-apihub-service/apihub-service
+qubership-apihub-service/data/**
+qubership-apihub-service/logs/**
+qubership-apihub-service/qubership-apihub-service.exe
+qubership-apihub-service/__debug_bin.exe
+qubership-apihub-service/qubership-apihub-service
 logs
-apihub-service/logs
-apihub-service/tmp/**
-apihub-service/bin/**
+qubership-apihub-service/logs
+qubership-apihub-service/tmp/**
+qubership-apihub-service/bin/**
 
 docs/local_development/jwt_private_key
 *.patch
