--- a/docs/local_development/docker-compose/build-task-consumer/docker-compose.yml
+++ b/docs/local_development/docker-compose/build-task-consumer/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.9"
 services:
-  apihub-node-service:
-    image: ghcr.io/qubership/apihub-node-service-assembly-develop:build861
+  qubership-apihub-build-task-consumer:
+    image: ghcr.io/netcracker/qubership-apihub-build-task-consumer:main
     environment:
       APIHUB_BACKEND_ADDRESS: "host.docker.internal:8090"
       APIHUB_API_KEY: "123123"
     ports:
-      - "8092:8080"
+      - "3000:3000"
     restart: unless-stopped 
