--- a/docs/api/Public Registry API.yaml
+++ b/docs/api/Public Registry API.yaml
@@ -57,8 +57,8 @@ tags:
     description: API for 'try it' functionality
   - name: Operation groups
     description: Operation groups
-  - name: User Profile
-    description: APIs for user's personal settings
+  - name: User profile
+    description: APIs for user's personal settings.
 paths:
   "/api/v1/system/configuration":
     get:
