POST /api/v1/personalAccessToken: 200 responce code was replaced to 201

--- a/docs/api/Public Registry API.yaml
+++ b/docs/api/Public Registry API.yaml
@@ -3020,8 +3020,8 @@ paths:
                 - name
                 - daysUntilExpiry
       responses:
-        '200':
-          description: Success
+        '201':
+          description: Created
           content:
             application/json:
               schema:
